--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -8,7 +8,7 @@
 		<title>React JS Boilerplate</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="root"><!--ssr-outlet--></div>
 		<script type="module" src="/src/Client/index.tsx"></script>
 	</body>
 </html>
