--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<title>React JS Boilerplate</title>
+		<!--styles-outlet-->
 	</head>
 	<body>
 		<div id="root"><!--ssr-outlet--></div>
