--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	</head>
 	<body>
 		<div id="root"><!--ssr-outlet--></div>
-		<script type="module" src="/src/Client/index.tsx"></script>
+		<script type="module" src="./src/Client/index.tsx"></script>
 	</body>
 </html>
